<resources>

    <string name="app_name">Pizza Finder</string>
    <string name="ad_unit_id">ca-app-pub-3892677699343303/2379904475</string>

    <string name="loading">Loading…</string>
    <string name="progressDefaultText">Finding Your Location…</string>
    <string name="nearest_places">This list displays the nearest pizza to your current location.  Swipe left to remove from list, swipe right to add to favorites.</string>
    <string name="ratingLBL">Rating:</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="favorites">Favorites</string>
    <string name="fav_hint">Swipe Left to Remove Favorite</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="search_area">Search Radius (meters)</string>
    <string name="search_area_hint">4000</string>
    <string name="ok_text">OK</string>
    <string name="next_text">Next</string>
    <string name="warning_text">Warning</string>
    <string name="dialog_text">The radius must be a value between 1 and 50000.</string>
    <string name="location_images">Pizza Location Images</string>
    <string name="downloading_photos">Downloading Photos…</string>
    <string name="no_photos">No Photos Available</string>

    <string name="about_text">This is a sample application that uses Multi-Threading(AsyncTasks and Callables with an
        Executer pool), Fragments, Material Design and Support Libraries. The RecyclerView allows the removal of rows.
        This app also uses the following libraries. Butterknife, Retrofit, GSON, Picasso, OKHttp, Google Maps, Google
        Ads and Google Places. More of my work can be found
        <a href="https://github.com/bgustafson">here</a>
    </string>
    <string name="about_header">About Pizza Finder App</string>
    <string name="about_dismiss">Dismiss</string>

    <string name="permission_error">Application does not have Location permission.</string>
    <string name="no_locations">No Pizza Locations Found!</string>
</resources>
