<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item   android:title="@string/reload"
            android:id="@+id/action_rerun"
            android:icon="@mipmap/ic_autorenew_black_24dp"
            android:orderInCategory="100"
            app:showAsAction="always"/>

    <item
            android:title="@string/favorites"
            android:id="@+id/action_favorites"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:orderInCategory="100"
            app:showAsAction="always"/>

    <item
            android:title="@string/settings"
            android:id="@+id/action_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:orderInCategory="100"
            app:showAsAction="always"/>
</menu>